@@ -21,16 +21,8 @@ module Padrino
         # Add access_control permission in our app.rb
         #
         def add_project_module(controller)
-          permission = indent(6, "role.project_module :#{controller}, \"/#{controller}\"\n")
+          permission = "      role.project_module :#{controller}, \"/#{controller}\"\n"
           inject_into_file destination_root("/admin/app.rb"),  permission, :after => "access_control.roles_for :admin do |role, account|\n"
-        end
-
-        ##
-        # Indent a content/string for the given spaces
-        #
-        def indent(count, content)
-          indent = ' ' * count
-          content.lines.map { |line| line != "\n" ? indent+line : "\n" }.join
         end
       end # Actions
     end # Admin
